Add complete profiles endpoints
